fix again again

--- a/themes/TKLtheme/layout/casper/index.ejs
+++ b/themes/TKLtheme/layout/casper/index.ejs
@@ -43,7 +43,7 @@
                     </tr>
                     <tr>
                         <td colspan="6" style=" text-align: center; ">            
-                            <img class="proc-pic" src="<%- theme.proc.img %>" alt="RQE:CC" width="320">
+                            <img class="proc-pic" src="<%- config.root %><%- theme.proc.img %>" alt="RQE:CC" width="320">
                         </td>
                     </tr>
                     <tr>
