更改主标题颜色

--- a/themes/TKLtheme/layout/casper/index.ejs
+++ b/themes/TKLtheme/layout/casper/index.ejs
@@ -7,8 +7,8 @@
                 <div class="center-me animateme" data-when="exit" data-from="0" data-to="0.6" data-opacity="0" data-translatey="100">
                     <div>
                         <% theme.top_saying.forEach(function(item){ %>
-                        <h2><%- item.title %></h2>
-                        <p><%- item.content %></p>
+                        <h2 class="main-title"><%- item.title %></h2>
+                        <p class="main-title"><%- item.content %></p>
                         <% }); %>
 
                     </div>
