--- a/themes/TKLtheme/source/css/style.css
+++ b/themes/TKLtheme/source/css/style.css
@@ -3342,3 +3342,10 @@ footer .footer_bottom {
 .icon-sina-weibo:before { content: "\e666"; }
 .icon-github:before { content: "\e636"; }
 /*---------------- END ------------------------*/
+
+.main-title
+{
+    color: #EEE;
+}
+
+
