再再再改样式

--- a/public/css/all.css
+++ b/public/css/all.css
@@ -3475,9 +3475,8 @@ footer .footer_bottom {
 .proc caption {
     text-align: center;
 }
-.main-title
-{
-    color: #EEE;
+.main-title {
+    color: #EEE !important;
 }
 
 .entry .gist {
